Attempts to fix position:fixed on iOS

--- a/css/small/_editor-tools.scss
+++ b/css/small/_editor-tools.scss
@@ -7,7 +7,7 @@
 	bottom: 0;
 
 	width: 100%;
-	height: 150px;
+	height: 110px;
 	overflow: auto;
 	overflow-y: hidden;
 	-webkit-overflow-scrolling: touch;
